Revert "fix: Simplify APK build and deployment process"
This reverts commit 69377ef81c499a930149ed1054a2b3a316dcff0e.

--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -44,6 +44,9 @@ jobs:
   build:
     name: Build APKs
     runs-on: ${{ vars.IS_USING_HOSTED_RUNNERS == 'true' && 'self-hosted' || 'ubuntu-latest' }}
+    strategy:
+      matrix:
+        apiLevel: [21, 26]
     steps:
       - uses: actions/checkout@v4
 
@@ -67,13 +70,13 @@ jobs:
       - name: Build Release APK
         env:
           SKETCHUB_API_KEY: ${{ secrets.SKETCHUB_API_KEY }}
-        run: gradle assembleRelease
+        run: gradle assembleMinApi${{ matrix.apiLevel }}Release
 
       - name: Upload Release APK
         uses: actions/upload-artifact@v4
         with:
-          name: apk-release
-          path: app/build/outputs/apk/release
+          name: apk-minApi${{ matrix.apiLevel }}-release
+          path: app/build/outputs/apk/minApi${{ matrix.apiLevel }}/release
 
   aggregateAndSend:
     name: Send APKs to Telegram
@@ -82,11 +85,17 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Download Artifacts
+      - name: Download Artifacts for API 21
         uses: actions/download-artifact@v4
         with:
-          name: apk-release
-          path: ./downloaded-artifact
+          name: apk-minApi21-release
+          path: ./downloaded-artifact/minApi21
+
+      - name: Download Artifacts for API 26
+        uses: actions/download-artifact@v4
+        with:
+          name: apk-minApi26-release
+          path: ./downloaded-artifact/minApi26
 
       - name: Set up Python 3
         uses: actions/setup-python@v5
@@ -116,7 +125,8 @@ jobs:
           BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
           CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
           TOPIC_ID: ${{ secrets.TELEGRAM_TOPIC_ID }}
-          APK_PATH: ./downloaded-artifact/app-release.apk
+          APK_MIN_API21: ./downloaded-artifact/minApi21/app-minApi21-release.apk
+          APK_MIN_API26: ./downloaded-artifact/minApi26/app-minApi26-release.apk
         run: |
           python ./.github/workflows/deploy_artifacts.py
         continue-on-error: true
